src/snapshots/foxglove__lexer__test__lex_function.snap
---
source: src/lexer.rs
description: "fn|a, b| { a + b; }"
expression: tokens
---
Some(
    [
        (
            Keyword(
                Fn,
            ),
            0..2,
        ),
        (
            Control(
                Pipe,
            ),
            2..3,
        ),
        (
            Ident(
                "a",
            ),
            3..4,
        ),
        (
            Control(
                Comma,
            ),
            4..5,
        ),
        (
            Ident(
                "b",
            ),
            6..7,
        ),
        (
            Control(
                Pipe,
            ),
            7..8,
        ),
        (
            Control(
                OpenCurlyBrace,
            ),
            9..10,
        ),
        (
            Ident(
                "a",
            ),
            11..12,
        ),
        (
            Operator(
                Plus,
            ),
            13..14,
        ),
        (
            Ident(
                "b",
            ),
            15..16,
        ),
        (
            Control(
                Semicolon,
            ),
            16..17,
        ),
        (
            Control(
                CloseCurlyBrace,
            ),
            18..19,
        ),
    ],
)
