src/snapshots/foxglove__lexer__test__lex_function_with_float.snap
---
source: src/lexer.rs
description: "fn|a, b| { a + 1.0; }"
expression: tokens
---
Some(
    [
        (
            Keyword(
                Fn,
            ),
            0..2,
        ),
        (
            Control(
                Pipe,
            ),
            2..3,
        ),
        (
            Ident(
                "a",
            ),
            3..4,
        ),
        (
            Control(
                Comma,
            ),
            4..5,
        ),
        (
            Ident(
                "b",
            ),
            6..7,
        ),
        (
            Control(
                Pipe,
            ),
            7..8,
        ),
        (
            Control(
                OpenCurlyBrace,
            ),
            9..10,
        ),
        (
            Ident(
                "a",
            ),
            11..12,
        ),
        (
            Operator(
                Plus,
            ),
            13..14,
        ),
        (
            Float(
                "1.0",
            ),
            15..18,
        ),
        (
            Control(
                Semicolon,
            ),
            18..19,
        ),
        (
            Control(
                CloseCurlyBrace,
            ),
            20..21,
        ),
    ],
)
