src/snapshots/foxglove__lexer__test__lex_function_with_list.snap
---
source: src/lexer.rs
description: "fn|a, b| { a + [1, 2]; }"
expression: tokens
---
Some(
    [
        (
            Keyword(
                Fn,
            ),
            0..2,
        ),
        (
            Control(
                Pipe,
            ),
            2..3,
        ),
        (
            Ident(
                "a",
            ),
            3..4,
        ),
        (
            Control(
                Comma,
            ),
            4..5,
        ),
        (
            Ident(
                "b",
            ),
            6..7,
        ),
        (
            Control(
                Pipe,
            ),
            7..8,
        ),
        (
            Control(
                OpenCurlyBrace,
            ),
            9..10,
        ),
        (
            Ident(
                "a",
            ),
            11..12,
        ),
        (
            Operator(
                Plus,
            ),
            13..14,
        ),
        (
            Control(
                OpenSquareBracket,
            ),
            15..16,
        ),
        (
            Int(
                "1",
            ),
            16..17,
        ),
        (
            Control(
                Comma,
            ),
            17..18,
        ),
        (
            Int(
                "2",
            ),
            19..20,
        ),
        (
            Control(
                CloseSquareBracket,
            ),
            20..21,
        ),
        (
            Control(
                Semicolon,
            ),
            21..22,
        ),
        (
            Control(
                CloseCurlyBrace,
            ),
            23..24,
        ),
    ],
)
