src/snapshots/foxglove__lexer__test__lex_int.snap
---
source: src/lexer.rs
description: "123"
expression: tokens
---
Some(
    [
        (
            Int(
                "123",
            ),
            0..3,
        ),
    ],
)
