src/snapshots/foxglove__lexer__test__lex_keywords-2.snap
---
source: src/lexer.rs
description: return var fn if else for while in break continue
expression: lex_errs
---
[]
