src/snapshots/foxglove__lexer__test__lex_keywords.snap
---
source: src/lexer.rs
description: return var fn if else for while in break continue
expression: tokens
---
Some(
    [
        (
            Keyword(
                Return,
            ),
            0..6,
        ),
        (
            Keyword(
                Var,
            ),
            7..10,
        ),
        (
            Keyword(
                Fn,
            ),
            11..13,
        ),
        (
            Keyword(
                If,
            ),
            14..16,
        ),
        (
            Keyword(
                Else,
            ),
            17..21,
        ),
        (
            Keyword(
                For,
            ),
            22..25,
        ),
        (
            Keyword(
                While,
            ),
            26..31,
        ),
        (
            Keyword(
                In,
            ),
            32..34,
        ),
        (
            Keyword(
                Break,
            ),
            35..40,
        ),
        (
            Keyword(
                Continue,
            ),
            41..49,
        ),
    ],
)
