src/snapshots/foxglove__lexer__test__lex_operators.snap
---
source: src/lexer.rs
description: + - * / .. == != < > <= >=
expression: tokens
---
Some(
    [
        (
            Operator(
                Plus,
            ),
            0..1,
        ),
        (
            Operator(
                Minus,
            ),
            2..3,
        ),
        (
            Operator(
                Star,
            ),
            4..5,
        ),
        (
            Operator(
                Slash,
            ),
            6..7,
        ),
        (
            Operator(
                Range,
            ),
            8..10,
        ),
        (
            Operator(
                Eq,
            ),
            11..13,
        ),
        (
            Operator(
                Neq,
            ),
            14..16,
        ),
        (
            Operator(
                Lt,
            ),
            17..18,
        ),
        (
            Operator(
                Gt,
            ),
            19..20,
        ),
        (
            Operator(
                Lte,
            ),
            21..23,
        ),
        (
            Operator(
                Gte,
            ),
            24..26,
        ),
    ],
)
