src/snapshots/foxglove__lexer__test__lex_pipe.snap
---
source: src/lexer.rs
description: "||>"
expression: tokens
---
Some(
    [
        (
            Control(
                Pipe,
            ),
            0..1,
        ),
        (
            Control(
                PipeArrow,
            ),
            1..3,
        ),
    ],
)
