src/snapshots/foxglove__lexer__test__lex_unit.snap
---
source: src/lexer.rs
description: ()
expression: tokens
---
Some(
    [
        (
            Control(
                Unit,
            ),
            0..2,
        ),
    ],
)
