src/snapshots/foxglove__lexer__test__lex_weird-2.snap
---
source: src/lexer.rs
description: ((((((a + b) * c) / d) - e) + f) * g)
expression: lex_errs
---
[]
